Add more enable flags (GLES2/3/31/Vulkan/EGL)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,31 +13,19 @@ endif ()
 project(dEQP-Core-${DEQP_TARGET})
 
 if (EMSCRIPTEN)
-	# TODO: Currently does not build when setting EGL OFF with Emscripten, but
-	# add support for this.
-	set(EGL_DEFAULT ON)
-	set(GLES3_DEFAULT OFF)
-	set(VULKAN_DEFAULT OFF)
-else()
-	set(EGL_DEFAULT ON)
-	set(GLES3_DEFAULT ON)
-	set(VULKAN_DEFAULT ON)
+	set(NOT_EMSCRIPTEN OFF)
+else ()
+	set(NOT_EMSCRIPTEN ON)
 endif ()
 
-option(VULKAN "Build tests that target Vulkan" ${VULKAN_DEFAULT})
-message(STATUS "Targeting Vulkan tests module: ${VULKAN}")
-if (VULKAN)
-	add_definitions(-DDEQP_VULKAN)
-endif ()
-
-option(EGL "Build tests that target EGL" ${EGL_DEFAULT})
-message(STATUS "Targeting EGL tests module: ${EGL}")
-if (EGL)
-	add_definitions(-DDEQP_EGL)
-endif ()
-
-option(GLES3 "Build tests that target OpenGL ES 3.0" ${GLES3_DEFAULT})
-message(STATUS "Targeting OpenGL ES 3.0 tests module: ${GLES3}")
+option(DEQP_ENABLE_GLES2	"Build OpenGL ES 2.0 tests" ON)
+option(DEQP_ENABLE_GLES3	"Build OpenGL ES 3.0 tests" ON)
+option(DEQP_ENABLE_GLES31	"Build OpenGL ES 3.1 tests" ON)
+option(DEQP_ENABLE_VULKAN	"Build Vulkan tests" ${NOT_EMSCRIPTEN})
+option(DEQP_TEST_EGL		"Build EGL tests" ${NOT_EMSCRIPTEN})
+# TODO: Remove EGL dependency from Emscripten build.
+# Then, this can be changed to ${NOT_EMSCRIPTEN}.
+option(DEQP_USE_EGL			"Build with EGL support" ON)
 
 include(framework/delibs/cmake/Defs.cmake NO_POLICY_SCOPE)
 include(framework/delibs/cmake/CFlags.cmake)
@@ -47,8 +35,13 @@ add_definitions(-DDE_ASSERT_FAILURE_CALLBACK)
 # dEQP-specific configuration. Target file should override these.
 set(DEQP_TARGET_NAME		"UNKNOWN")		# Target name
 
+
+set(DEQP_SUPPORT_GLES2		${DEQP_ENABLE_GLES2})
 set(DEQP_GLES2_LIBRARIES	)				# GLESv2 libraries. If empty, run-time linking is used
+set(DEQP_SUPPORT_GLES3		${DEQP_ENABLE_GLES3})
 set(DEQP_GLES3_LIBRARIES	)				# GLESv3 libraries. If empty, run-time linking is used
+set(DEQP_SUPPORT_GLES31		${DEQP_ENABLE_GLES31})
+set(DEQP_SUPPORT_VULKAN		${DEQP_ENABLE_VULKAN})
 set(DEQP_EGL_LIBRARIES		)				# EGL libraries
 
 # Legacy APIs that don't use run-time loading
@@ -100,12 +93,12 @@ if (NOT PNG_INCLUDE_PATH OR NOT PNG_LIBRARY)
 endif ()
 
 # glslang
-if (NOT EMSCRIPTEN)
+if (DEQP_SUPPORT_VULKAN)
 	add_subdirectory(external/glslang)
 endif ()
 
 # spirv-tools
-if (NOT EMSCRIPTEN)
+if (DEQP_SUPPORT_VULKAN)
 	add_subdirectory(external/spirv-tools)
 endif ()
 
@@ -113,6 +106,10 @@ include_directories(${PNG_INCLUDE_PATH})
 
 message(STATUS "DEQP_TARGET_NAME        = ${DEQP_TARGET_NAME}")
 message(STATUS "DEQP_SUPPORT_GLES1      = ${DEQP_SUPPORT_GLES1}")
+message(STATUS "DEQP_SUPPORT_GLES2      = ${DEQP_SUPPORT_GLES2}")
+message(STATUS "DEQP_SUPPORT_GLES3      = ${DEQP_SUPPORT_GLES3}")
+message(STATUS "DEQP_SUPPORT_GLES31     = ${DEQP_SUPPORT_GLES31}")
+message(STATUS "DEQP_SUPPORT_VULKAN     = ${DEQP_SUPPORT_VULKAN}")
 message(STATUS "DEQP_GLES1_LIBRARIES    = ${DEQP_GLES1_LIBRARIES}")
 message(STATUS "DEQP_GLES2_LIBRARIES    = ${DEQP_GLES2_LIBRARIES}")
 message(STATUS "DEQP_GLES3_LIBRARIES    = ${DEQP_GLES3_LIBRARIES}")
@@ -120,6 +117,8 @@ message(STATUS "DEQP_GLES31_LIBRARIES   = ${DEQP_GLES31_LIBRARIES}")
 message(STATUS "DEQP_GLES32_LIBRARIES   = ${DEQP_GLES32_LIBRARIES}")
 message(STATUS "DEQP_SUPPORT_VG         = ${DEQP_SUPPORT_VG}")
 message(STATUS "DEQP_VG_LIBRARIES       = ${DEQP_VG_LIBRARIES}")
+message(STATUS "DEQP_USE_EGL            = ${DEQP_USE_EGL}")
+message(STATUS "DEQP_TEST_EGL           = ${DEQP_TEST_EGL}")
 message(STATUS "DEQP_EGL_LIBRARIES      = ${DEQP_EGL_LIBRARIES}")
 message(STATUS "DEQP_PLATFORM_LIBRARIES = ${DEQP_PLATFORM_LIBRARIES}")
 
@@ -164,12 +163,36 @@ if (DEQP_SUPPORT_GLES1)
 	endif ()
 endif ()
 
+if (DEQP_SUPPORT_GLES2)
+	add_definitions(-DDEQP_SUPPORT_GLES2=1)
+endif ()
+
+if (DEQP_SUPPORT_GLES3)
+	add_definitions(-DDEQP_SUPPORT_GLES3=1)
+endif ()
+
+if (DEQP_SUPPORT_GLES31)
+	add_definitions(-DDEQP_SUPPORT_GLES31=1)
+endif ()
+
+if (DEQP_SUPPORT_VULKAN)
+	add_definitions(-DDEQP_SUPPORT_VULKAN=1)
+endif ()
+
 if (DEQP_SUPPORT_VG)
 	add_definitions(-DDEQP_SUPPORT_VG=1)
 
 	if (NOT DEFINED DEQP_VG_LIBRARIES)
 		message(FATAL_ERROR "Run-time loading of VG is not supported (DEQP_VG_LIBRARIES is not set)")
 	endif ()
+endif ()
+
+if (DEQP_USE_EGL)
+	add_definitions(-DDEQP_USE_EGL=1)
+endif ()
+
+if (DEQP_TEST_EGL)
+	add_definitions(-DDEQP_TEST_EGL=1)
 endif ()
 
 if (DE_COMPILER_IS_MSC)
@@ -300,7 +323,7 @@ endmacro (add_data_file)
 
 add_subdirectory(framework)
 
-if (NOT EMSCRIPTEN)
+if (DEQP_SUPPORT_VULKAN)
 	add_subdirectory(external/vulkancts/framework/vulkan)
 endif ()
 
@@ -310,8 +333,11 @@ endif ()
 
 add_subdirectory(modules)
 
-if (NOT EMSCRIPTEN)
+if (DEQP_SUPPORT_VULKAN)
 	add_subdirectory(external/vulkancts/modules/vulkan)
+endif ()
+
+if (NOT EMSCRIPTEN)
 	add_subdirectory(external/openglcts)
 endif ()
 
