--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,16 +1,19 @@
 # dEQP Modules
 add_subdirectory(glshared)
-add_subdirectory(gles2)
 
-if (GLES3)
+if (DEQP_SUPPORT_GLES2)
+	add_subdirectory(gles2)
+endif ()
+
+if (DEQP_SUPPORT_GLES3)
 	add_subdirectory(gles3)
 endif ()
 
-if (NOT EMSCRIPTEN)
+if (DEQP_SUPPORT_GLES31)
 	add_subdirectory(gles31)
 endif ()
 
-if (EGL)
+if (DEQP_TEST_EGL)
 	add_subdirectory(egl)
 endif ()
 
