--- a/modules/internal/CMakeLists.txt
+++ b/modules/internal/CMakeLists.txt
@@ -25,8 +25,6 @@ set(DE_INTERNAL_TESTS_SRCS
 	ditTextureFormatTests.hpp
 	ditAstcTests.cpp
 	ditAstcTests.hpp
-	ditVulkanTests.cpp
-	ditVulkanTests.hpp
 	)
 
 set(DE_INTERNAL_TESTS_LIBS
@@ -34,8 +32,13 @@ set(DE_INTERNAL_TESTS_LIBS
 	referencerenderer
 	)
 
-if (VULKAN)
-	set(DE_INTERNAL_TESTS_LIBS "${DE_INTERNAL_TESTS_LIBS} vkutil")
+if (DEQP_SUPPORT_VULKAN)
+	set(DE_INTERNAL_TESTS_SRCS
+		${DE_INTERNAL_TESTS_SRCS}
+		ditVulkanTests.cpp
+		ditVulkanTests.hpp
+		)
+	set(DE_INTERNAL_TESTS_LIBS ${DE_INTERNAL_TESTS_LIBS} vkutil)
 endif ()
 
 add_deqp_module(de-internal-tests "${DE_INTERNAL_TESTS_SRCS}" "${DE_INTERNAL_TESTS_LIBS}" ditTestPackageEntry.cpp)
