--- a/framework/platform/CMakeLists.txt
+++ b/framework/platform/CMakeLists.txt
@@ -143,7 +143,7 @@ endif ()
 add_library(tcutil-platform STATIC ${TCUTIL_PLATFORM_SRCS})
 
 # Add vkutil to the deps before tcutil so that it picks up the c++11 dependencies
-if (VULKAN)
+if (DEQP_SUPPORT_VULKAN)
 	target_link_libraries(tcutil-platform vkutil)
 endif ()
 
@@ -152,7 +152,7 @@ target_link_libraries(tcutil-platform tcutil ${TCUTIL_PLATFORM_LIBS})
 # Always link to glutil as some platforms such as Win32 always support GL
 target_link_libraries(tcutil-platform glutil)
 
-if (EGL)
+if (DEQP_USE_EGL)
 	# Always link to eglutil
 	target_link_libraries(tcutil-platform eglutil)
 endif ()
