Use the same shell html file for all deqp modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -283,6 +283,10 @@ macro (add_deqp_module MODULE_NAME SRCS LIBS ENTRY)
 		add_executable(${MODULE_NAME} ${PROJECT_SOURCE_DIR}/framework/platform/tcuMain.cpp ${ENTRY})
 		target_link_libraries(${MODULE_NAME} tcutil-platform "${MODULE_NAME}${MODULE_LIB_TARGET_POSTFIX}")
 		target_copy_files(${MODULE_NAME} platform-libs-${MODULE_NAME} "${DEQP_PLATFORM_COPY_LIBRARIES}")
+
+		if (EMSCRIPTEN)
+			append_linker_flag(${MODULE_NAME} "--shell-file ${CMAKE_SOURCE_DIR}/emscripten/shell.html")
+		endif()
 	endif ()
 
 	# Data file target
