improve harness, fix build for deqp.html

--- a/emscripten/CMakeLists.txt
+++ b/emscripten/CMakeLists.txt
@@ -12,5 +12,9 @@ add_data_dir(deqp.js ../data/gles2/shaders gles2/shaders)
 add_data_dir(deqp.js ../data/gles3/data gles3/data)
 add_data_dir(deqp.js ../data/gles3/shaders gles3/shaders)
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/deqp.html
-	${CMAKE_CURRENT_BINARY_DIR}/deqp.html COPYONLY)
+add_custom_command(
+	TARGET deqp.js
+	POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy
+		${CMAKE_CURRENT_SOURCE_DIR}/deqp.html
+		${CMAKE_CURRENT_BINARY_DIR}/deqp.html)
