--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(internal)
 # Pass DEQP_MODULE_LIBRARIES and DEQP_MODULE_ENTRY_POINTS
 set(DEQP_MODULE_LIBRARIES ${DEQP_MODULE_LIBRARIES} PARENT_SCOPE)
 set(DEQP_MODULE_ENTRY_POINTS ${DEQP_MODULE_ENTRY_POINTS} PARENT_SCOPE)
+set(DEQP_EMSCRIPTEN_PRELOADS ${DEQP_EMSCRIPTEN_PRELOADS} PARENT_SCOPE)
