--- a/framework/egl/wrapper/CMakeLists.txt
+++ b/framework/egl/wrapper/CMakeLists.txt
@@ -20,5 +20,7 @@ set(EGLWRAPPER_LIBS
 	${DEQP_EGL_LIBRARIES}
 	)
 
-add_library(eglwrapper STATIC ${EGLWRAPPER_SRCS})
-target_link_libraries(eglwrapper ${EGLWRAPPER_LIBS})
+if (DEQP_SUPPORT_EGL)
+	add_library(eglwrapper STATIC ${EGLWRAPPER_SRCS})
+	target_link_libraries(eglwrapper ${EGLWRAPPER_LIBS})
+endif ()
