--- a/external/spirv-tools/CMakeLists.txt
+++ b/external/spirv-tools/CMakeLists.txt
@@ -24,7 +24,8 @@ else ()
 	set(SPIRV_HEADERS_ABS_PATH "${CMAKE_SOURCE_DIR}/${SPIRV_HEADERS_SRC_PATH}")
 endif ()
 
-if (EXISTS ${SPIRV_TOOLS_ABS_PATH}/source/opcode.cpp AND
+if ((NOT EMSCRIPTEN) AND
+	EXISTS ${SPIRV_TOOLS_ABS_PATH}/source/opcode.cpp AND
 	EXISTS ${SPIRV_HEADERS_ABS_PATH}/include/spirv/1.0/spirv.h)
 	message(STATUS "spirv-tools found; building with DEQP_HAVE_SPIRV_TOOLS")
 	set(CMAKE_C_FLAGS ${DE_3RD_PARTY_C_FLAGS})
